// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaWikiTable it should build correctly with cell options 1`] = `
"{|
|- style=\\"width: 15em\\"
!colspan=\\"2\\" | header
|- style=\\"width: 15em\\"
|style=\\"text-align: center;\\" | value
|}"
`;

exports[`MediaWikiTable it should build correctly with cell options, minimal 1`] = `
"{|
|-
! test1 !! style=\\"text-align: center;\\" | test2
|-
| style=\\"text-align: center;\\" | '''test1''' table1 || colspan=\\"2\\" | '''test2''' table2
|-
| colspan=\\"2\\" | ''test3'' table3 || test4
 table4
|}"
`;

exports[`MediaWikiTable it should build correctly with no options, minimal 1`] = `
"{|
|-
! test1 !! test2
|-
| '''test1''' table1 || '''test2''' table2
|-
| ''test3'' table3 || test4
 table4
|}"
`;

exports[`MediaWikiTable it should build correctly with no options, not minimal 1`] = `
"{|
|-
!test1
!test2
|-
|'''test1''' table1
|'''test2''' table2
|-
|''test3'' table3
|test4
 table4
|}"
`;

exports[`MediaWikiTable it should build correctly with row options 1`] = `
"{|
|- style=\\"width: 15em\\"
!header
|- style=\\"width: 15em\\"
|value
|}"
`;

exports[`MediaWikiTable it should build correctly with table options 1`] = `
"{| class=\\"wikitable\\"
|-
!header
|-
|value
|}"
`;
